manifest/objects/SBQQ__SubscribedQuoteLine__c.object
<CustomObject>
    <customHelpPage>SBQQ__SubscribedAssetHelp</customHelpPage>
    <description>Links a particular asset to the subscription that covers it.</description>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the subscribed asset record is active.</description>
        <inlineHelpText>Indicates whether the subscribed asset record is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuoteLineQuantity__c</fullName>
        <description>Quantity quoted on the Asset Quote Line.</description>
        <inlineHelpText>Quantity quoted on the Asset Quote Line.</inlineHelpText>
        <label>Asset Quote Line Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset quote line being covered by a subscription quote line.</description>
        <inlineHelpText>Asset quote line being covered by a subscription quote line.</inlineHelpText>
        <label>Asset Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Asset Quote Lines</relationshipLabel>
        <relationshipName>SubscribedQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the quote for the quoteLines.</description>
        <inlineHelpText>Identifies the quote for the quoteLines.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quote</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionBasePrice__c</fullName>
        <description>Unit price used in Percent of Total calculation.</description>
        <inlineHelpText>Unit price used in Percent of Total calculation.</inlineHelpText>
        <label>Subscription Base Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionNetTotal__c</fullName>
        <description>Net total of the Subscription Quote Line.</description>
        <inlineHelpText>Net total of the Subscription Quote Line.</inlineHelpText>
        <label>Subscription Net Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription quote line that covers the asset quote line.</description>
        <inlineHelpText>Subscription quote line that covers the asset quote line.</inlineHelpText>
        <label>Subscription Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Subscribed Quote Lines (Subscription Quote Line)</relationshipLabel>
        <relationshipName>SubscriptionQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Subscribed Quote Line</label>
    <nameField>
        <displayFormat>SQL-{00000000}</displayFormat>
        <label>Subscribed Quote Line#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribed Quote Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>